testdata/baselines/reference/submodule/compiler/unusedTypeParameters1.errors.txt
unusedTypeParameters1.ts(1,15): error TS6196: 'typeparameter1' is declared but never used.


==== unusedTypeParameters1.ts (1 errors) ====
    class greeter<typeparameter1> {
                  ~~~~~~~~~~~~~~
!!! error TS6196: 'typeparameter1' is declared but never used.
    
    }